# osgVegetation

./: .travis.yml  CMakeLists.txt  COPYING  README.md
CMakeModules/: FindOSG.cmake  OSGDep.cmake  osg-version.cmake  osgv-macros.cmake  osgvegetation-config.cmake
applications/: CMakeLists.txt
applications/billboard_generator/: billboard_generator.cpp  billboard_generator.sln  billboard_generator.vcxproj  billboard_generator.vcxproj.filters  impostor_generator.h
applications/osgVegetationBuilder/: CMakeLists.txt  osgVegetationBuilder.cpp
applications/osgVegetationBuilder/tests/: vb_test1.bat
applications/osgVegetationViewer/: CMakeLists.txt  osgVegetationViewer.cpp
billboard_generator/: billboard_generator.cpp  billboard_generator.vcxproj.filters
forest/: BRTShaderInstancing.cpp  BRTShaderInstancing.h  BillboardObject.h  BillboardVegetationObject.h  MRTShaderInstancing.h  MeshLayer.h  MeshScattering.cpp  MeshScattering.h  MeshVegetationObject.h  MeshVegetationScattering.cpp  MeshVegetationScattering.h  PagedGrowth.cpp  QuadTreeScattering.cpp  QuadTreeScattering.h  TerrainQuery.cpp  TerrainQuery.h  VRTGeometryShader.cpp  VRTGeometryShader.h  VRTMeshShaderInstancing.cpp  VRTMeshShaderInstancing.h  VRTShaderInstancing.cpp  VRTShaderInstancing.h  VRTSoftware.cpp  VRTSoftware.h  VRTSoftwareGeometry.cpp  VRTSoftwareGeometry.h  VegetationCell.cpp  VegetationCell.h  VegetationLayer.h  VegetationRenderingTech.cpp  VegetationRenderingTech.h  VegetationScattering.cpp  VegetationScattering.h  VegetationTerrainQuery.cpp  VegetationTerrainQuery.h  VegetationUtils.h  forest.cpp  forest.vcxproj  forest.vcxproj.filters  stdafx.cpp
osgVegetation/: AggregateGeometryVisitor.h  BRTGeometryShader.cpp  BRTGeometryShader.h  BRTShaderInstancing.cpp  BRTShaderInstancing.h  BRTShaderInstancing2.cpp  BRTShaderInstancing2.h  BillboardData.h  BillboardLayer.h  BillboardObject.h  BillboardQuadTreeScattering.cpp  BillboardQuadTreeScattering.h  CMakeLists.txt  Common.h  CoverageColor.h  CoverageData.h  EnvironmentSettings.h  IBillboardRenderingTech.cpp  IBillboardRenderingTech.h  IMeshRenderingTech.h  ITerrainQuery.h  MRTShaderInstancing.cpp  MRTShaderInstancing.h  MaterialColor.h  MeshData.h  MeshLayer.h  MeshObject.h  MeshQuadTreeScattering.cpp  MeshQuadTreeScattering.h  MeshScattering.cpp  PagedGrowth.h  QuadTreeScattering.cpp  QuadTreeScattering.h  Serializer.cpp  Serializer.h  TerrainQuery.cpp  TerrainQuery.h  Tessellation.h  VRTGeometryShader.cpp  VRTSoftware.cpp  (+73 more)
osgVegetation/shaders/: brt_fragment.glsl  brt_geometry.glsl  brt_vertex.glsl  terrain_fragment.glsl  terrain_tess_ctrl.glsl  terrain_tess_eval.glsl  terrain_vertex.glsl  veg_fragment.glsl  veg_geometry.glsl  veg_tess_ctrl.glsl  veg_tess_eval.glsl  veg_vertex.glsl
osgVegetationPlugin/: CMakeLists.txt  ReaderWriterVegTerrain.cpp  ReaderWriterVegTerrain.h  ov_Serializer.cpp  ov_Serializer.h
osgVegetationRuntime/: CMakeLists.txt  ov_BillboardLayer.h  ov_BillboardTile.h  ov_PLODGeodeInjection.h  ov_PLODTerrainTileInjection.h  ov_Runtime.cpp  ov_Terrain.h  ov_Utils.h  ov_billboard_fragment.glsl  ov_billboard_geometry.glsl  ov_billboard_tess_ctrl.glsl  ov_billboard_tess_eval.glsl  ov_billboard_vertex.glsl  ov_terrain_detail_fragment.glsl  ov_terrain_detail_vertex.glsl
samples/: CMakeLists.txt
samples/common/: ovSampleUtils.h  ovSampleUtils_StateSetManipulator.h  ov_Demo.h  ov_DemoShadow.h  ov_DemoTerrain.h
samples/data/: env_config.xml  tq_config.xml  veg_config.xml
samples/data/billboards/: README.txt  fir01_bb.dds
samples/data/billboards/CGTextures/: licens.txt
samples/data/trees/: fir01_l0.osg  fir01_l1.osg  fir01_l1_bb.osg
samples/sample-billboard-layers/: CMakeLists.txt  sample_billboard_layers.cpp
samples/sample-billboards/: CMakeLists.txt  sample_billboards.cpp
samples/sample-data/: terrain.osg  terrain.osg.ovt  tq_config.xml  veg_config.xml
samples/sample-data/trees/: fir01_l0.osg  fir01_l1.osg
samples/sample-mesh-layers/: CMakeLists.txt  sample_mesh_layers.cpp
samples/sample-ovt/: CMakeLists.txt  sample_ovt.cpp
samples/sample-simple-terrain/: CMakeLists.txt  sample_simple_terrain.cpp
samples/sample-terrain-shaders/: CMakeLists.txt  sample_terrain_shaders.cpp
samples/sample1/: CMakeLists.txt  forest.cpp  sample1.cpp
samples/sample2/: CMakeLists.txt  sample2.cpp
samples/sample3/: CMakeLists.txt  sample3.cpp
samples/sample4/: CMakeLists.txt  VegGeometryTechnique.h  sample4.cpp
samples/sample5/: CMakeLists.txt  XBFInstance.h  XBFInstanceGenerator.h  XBFVegetationData.h  XBFVegetationTile.h  sample5.cpp  xbf_points_geometry.glsl  xbf_points_tess_ctrl.glsl  xbf_points_tess_eval.glsl  xbf_points_vertex.glsl  xbf_render_fragment.glsl  xbf_render_vertex.glsl
samples/sample7/: AggregateGeometryVisitor.cpp  AggregateGeometryVisitor.h  CMakeLists.txt  ov_GPUCullData.h  ov_MeshTileGenerator.h  ov_MeshTileGeneratorConfig.h  ov_mesh_cull_geometry.glsl  ov_mesh_render_vertex.glsl  sample7.cpp
samples/sample8/: CMakeLists.txt  sample8.cpp
scripts/vcpkg_port/: CONTROL  portfile.cmake
