#Copy shared libraries to runtime folder
#include(OSGDep)
#FILE(COPY ${OSG_BIN_FILES_DEBUG}  DESTINATION  ${CMAKE_BINARY_DIR}/out/debug) 
#FILE(COPY ${OSG_BIN_FILES_RELEASE}  DESTINATION  ${CMAKE_BINARY_DIR}/out/release) 
#FILE(COPY ${OSG_PLUGINS_DIR} DESTINATION  ${CMAKE_BINARY_DIR}/out/debug) 
#FILE(COPY ${OSG_PLUGINS_DIR} DESTINATION  ${CMAKE_BINARY_DIR}/out/release)

ADD_SUBDIRECTORY(osgVegetationBuilder)

#Copy shared libraries to install folder
#INSTALL(DIRECTORY ${OSG_PLUGINS_DIR} DESTINATION bin)
#INSTALL(FILES ${OSG_BIN_FILES_DEBUG} DESTINATION bin CONFIGURATIONS Debug)
#INSTALL(FILES ${OSG_BIN_FILES_RELEASE} DESTINATION bin CONFIGURATIONS Release)




