
#Copy shared libraries to runtime folder
#include(OSGDep)
#FILE(COPY ${OSG_BIN_FILES_DEBUG}  DESTINATION  ${CMAKE_BINARY_DIR}/out/debug) 
#FILE(COPY ${OSG_BIN_FILES_RELEASE}  DESTINATION  ${CMAKE_BINARY_DIR}/out/release) 
#FILE(COPY ${OSG_PLUGINS_DIR} DESTINATION  ${CMAKE_BINARY_DIR}/out/debug) 
#FILE(COPY ${OSG_PLUGINS_DIR} DESTINATION  ${CMAKE_BINARY_DIR}/out/release)

#Copy sample data to out folder
FILE(COPY ${CMAKE_CURRENT_SOURCE_DIR}/data  DESTINATION  ${CMAKE_BINARY_DIR}/out) 

ADD_SUBDIRECTORY(sample1)
ADD_SUBDIRECTORY(sample2)
#ADD_SUBDIRECTORY(sample3)

#Copy shared libraries to install folder
#INSTALL(DIRECTORY ${OSG_PLUGINS_DIR} DESTINATION bin)
#INSTALL(FILES ${OSG_BIN_FILES_DEBUG} DESTINATION bin CONFIGURATIONS Debug)
#INSTALL(FILES ${OSG_BIN_FILES_RELEASE} DESTINATION bin CONFIGURATIONS Release)

#copy sample data to install folder
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/data DESTINATION ./ FILES_MATCHING PATTERN "*.*" PATTERN ".svn" EXCLUDE)



