SET(APP_NAME "osgVegetationBuilder")
SET(CPP_FILES "osgVegetationBuilder.cpp")

include(OSGDep)

LINK_DIRECTORIES(${OSG_LIB_DIR})
ADD_EXECUTABLE(${APP_NAME} ${CPP_FILES})
SET_TARGET_PROPERTIES(${APP_NAME} PROPERTIES DEBUG_POSTFIX _d)
SET_TARGET_PROPERTIES(${APP_NAME} PROPERTIES FOLDER "Applications") 
TARGET_LINK_LIBRARIES(${APP_NAME} ${OSG_LINK_LIBRARIES} osgVegetation)
INCLUDE_DIRECTORIES(${OSG_INC_DIR} ${PROJECT_SOURCE_DIR}/osgVegetation)
INSTALL(TARGETS ${APP_NAME}  RUNTIME DESTINATION bin)
#INSTALL(DIRECTORY tests DESTINATION bin)
FILE(COPY tests/vb_test1.bat  DESTINATION  ${CMAKE_BINARY_DIR}/out) 
INSTALL(FILES tests/vb_test1.bat DESTINATION bin)





