SET(APP_NAME "osgVegetationBuilder")
SET(CPP_FILES "osgVegetationBuilder.cpp")

include(OSGDep)

ADD_EXECUTABLE(${APP_NAME} ${CPP_FILES})
SET_TARGET_PROPERTIES(${APP_NAME} PROPERTIES DEBUG_POSTFIX _d)
SET_TARGET_PROPERTIES(${APP_NAME} PROPERTIES FOLDER "Applications") 
TARGET_LINK_LIBRARIES(${APP_NAME} ${OPENSCENEGRAPH_LIBRARIES} osgVegetation)
INCLUDE_DIRECTORIES(${OPENSCENEGRAPH_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR}/osgVegetation)
INSTALL(TARGETS ${APP_NAME}  RUNTIME DESTINATION bin)
#INSTALL(DIRECTORY tests DESTINATION bin)
FILE(COPY tests/vb_test1.bat  DESTINATION  ${CMAKE_BINARY_DIR}/out) 
INSTALL(FILES tests/vb_test1.bat DESTINATION bin)





