SET(APP_NAME "sample1")
SET(CPP_FILES "sample1.cpp")

include(OSGDep)

LINK_DIRECTORIES(${OSG_LIB_DIR})
ADD_EXECUTABLE(${APP_NAME} ${CPP_FILES})
SET_TARGET_PROPERTIES(${APP_NAME} PROPERTIES DEBUG_POSTFIX _d)
SET_TARGET_PROPERTIES(${APP_NAME} PROPERTIES FOLDER "Samples") 
TARGET_LINK_LIBRARIES(${APP_NAME} ${OSG_LINK_LIBRARIES} osgVegetation)
INCLUDE_DIRECTORIES(${OSG_INC_DIR} ${PROJECT_SOURCE_DIR}/osgVegetation)
INSTALL(TARGETS ${APP_NAME}  RUNTIME DESTINATION bin)






