SET(APP_NAME "sample5")
SET(CPP_FILES sample5.cpp)

include(OSGDep)

ADD_EXECUTABLE(${APP_NAME} ${CPP_FILES})
SET_TARGET_PROPERTIES(${APP_NAME} PROPERTIES DEBUG_POSTFIX _d)
SET_TARGET_PROPERTIES(${APP_NAME} PROPERTIES FOLDER "Samples") 
TARGET_LINK_LIBRARIES(${APP_NAME} ${OPENSCENEGRAPH_LIBRARIES} osgVegetation)
INCLUDE_DIRECTORIES(${OPENSCENEGRAPH_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR}/osgVegetation)
INSTALL(TARGETS ${APP_NAME}  RUNTIME DESTINATION bin)






