SET(APP_NAME "sample7")
SET(CPP_FILES sample7.cpp)

include(OSGDep)
find_package(OpenGL)

ADD_EXECUTABLE(${APP_NAME} ${CPP_FILES})

SET_TARGET_PROPERTIES(${APP_NAME} PROPERTIES DEBUG_POSTFIX _d)
SET_TARGET_PROPERTIES(${APP_NAME} PROPERTIES FOLDER "Samples") 
TARGET_LINK_LIBRARIES(${APP_NAME} ${OPENSCENEGRAPH_LIBRARIES}  ${OPENGL_gl_LIBRARY})
INCLUDE_DIRECTORIES(${OPENSCENEGRAPH_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR}/osgVegetation ${PROJECT_SOURCE_DIR}/samples/common)

INSTALL(TARGETS ${APP_NAME}  RUNTIME DESTINATION bin)
INSTALL(FILES ${SHADERS_FILES} DESTINATION bin)
if(WIN32)
	FILE(COPY ${SHADERS_FILES}  DESTINATION  ${CMAKE_BINARY_DIR}/out/debug)
	FILE(COPY ${SHADERS_FILES}  DESTINATION  ${CMAKE_BINARY_DIR}/out/release)
endif()






